name:                SudokuProject
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ufabc-bcc/paradigmas-2021-q2-projeto-final-henriquefsa98
license:             BSD3
license-file:        LICENSE
author:              Henrique Fantato
maintainer:          henrique.fantato@aluno.ufabc.edu.br
copyright:           2021 Henrique Fantato
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  

executable SudokuProject
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SudokuSolversLib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,parallel
                      ,time
                      ,deepseq
                      ,directory==1.3.6.0      
  ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
